# fastapi_sqlmodel_demo

./: .env.example  pyproject.toml
app/core/: config.py  database.py
app/foods/: repository.py  router.py  service.py
app/profiles/: model.py  repository.py  router.py  schema.py  service.py
